# vico-analytics-server

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  dump_pickle_file.py  peticiones.txt  pyproject.toml  request.txt  server.ini  wsgi.py
.github/workflows/: development.yml  production.yml
src/apis/: acquisition_api.py  request_queue.py
