[tool.poetry]
name = "vico-analytics-server"
version = "0.1.0"
description = "Server"
authors = ["Roberto <carlos.rodriguez@lytica.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
Flask-APScheduler = "^1.12.3"
uwsgi = "^2.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
