[tool.poetry]
name = "vico-analytics-server"
version = "0.1.0"
description = "Server"
authors = ["Roberto <carlos.rodriguez@lytica.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
requests = "^2.27.1"
uwsgi = "^2.0.20"
redis = "^4.1.4"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
flake8-isort = "^4.1.1"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
